2010-10-30  Knut Anders Hatlen  <kahatlen@gmail.com>  (tiny change)

	* nnimap.el (nnimap-update-info): Allow 'ticked and other flags to be
	set on groups that don't have \* permanentflags.

2010-10-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-span): Drop colorisation of regions since we don't
	control the background color.
	(shr-tag-img): Ignore very small web bug type images.
	(shr-put-image): Add help-echo alt texts to the images.
	(shr-tag-video): Show the video poster image.

2010-10-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-depth): New variable.
	(shr-tag-table-1): Only insert the images after the top-level table.

	* nnimap.el (nnimap-split-incoming-mail): Fix typo.

	* gnus-util.el (gnus-list-memq-of-list): New function.

	* nnimap.el (nnimap-split-incoming-mail): Note that the INBOX has been
	selected.
	(nnimap-unsplittable-articles): New slot.
	(nnimap-new-articles): Use it.

2010-10-29  Stephen Berman  <stephen.berman@gmx.net>  (tiny change)

	* gnus-group.el (gnus-group-get-new-news-this-group): Don't have point
	move to the previous line on `M-g'.

2010-10-29  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-msg.el (gnus-inews-do-gcc): Don't have the backends do the slow
	*-request-group, which seems unnecessary.

	* nnimap.el (nnimap-quote-specials): Function copied over from
	imap.el.
	(nnimap-open-connection): Use AUTHENTICATE PLAIN on servers that say
	they support that.  Suggested by Tom Regner.

2010-10-29  Julien Danjou  <julien@danjou.info>

	* gnus-sum.el (gnus-summary-delete-marked-as-read): Remove obsolete
	defalias.
	(gnus-summary-delete-marked-with): Remove obsolete defalias.

	* gnus.el: Remove `gnus-nntp-service' variable.
	(gnus-secondary-servers): Make obsolete.
	(gnus-nntp-server): Make obsolete.

	* gnus-start.el (gnus-1): Remove x-splash calls.

	* gnus-ems.el (gnus-x-splash): Remove.

	* gnus.el (gnus-group-startup-message): Simplify/update code.
